# Playwright-Framework

./: .gitignore  README.md  conftest.py  pyproject.toml  tasks.db  test_tasks.db
app/: db.py  main.py  security.py
app/static/: index.html
pages/: base_page.py  task_board_page.py
tests/api/: test_auth_security_api.py  test_tasks_api.py
tests/contract/: test_openapi_contract.py
tests/ui/: test_task_board_ui.py
utils/: config.py  data_factory.py
