[project]
name = "playwright-framework"
version = "0.1.0"
dependencies = [
    "fastapi>=0.139.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "requests>=2.34.2",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers --tracing=retain-on-failure"
markers = [
    "ui: בדיקות end to end דרך הדפדפן",
    "api: בדיקות ברמת ה-API",
    "auth: בדיקות אימות ואבטחה",
    "smoke: בדיקות קריטיות מינימליות",
]